--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 
 	<div class="col-12  col-xl-6" id="img">
-		<img src="calcul.JFIF" width="50%">
+		<img src="calcul.jpg" width="50%">
 	</div>
 
 </div>
@@ -87,4 +87,5 @@
 </script>
 
 </body>
+
 </html>
