Update Équation du second degré.html

--- a/Équation du second degré.html
+++ b/Équation du second degré.html
@@ -39,9 +39,9 @@
 </div>
 
 <div class="col-12 col-xl-6" id="ASMD">
-	<input type="text" name="a" placeholder="Entrer la valeur de a" id="a"><br>
-	<input type="text" name="b" placeholder="Entrer la valeur de b" id="b"><br>
-	<input type="text" name="c" placeholder="Entrer la valeur de c" id="c"><br>
+	<input type="number" name="a" placeholder="Entrer la valeur de a" id="a"><br>
+	<input type="number" name="b" placeholder="Entrer la valeur de b" id="b"><br>
+	<input type="number" name="c" placeholder="Entrer la valeur de c" id="c"><br>
 
 
 
@@ -149,3 +149,4 @@
 </body>
 
 </html>
+
